# prompt-grader

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: batch.py  build.py  compare.py  grade.py  status.py
backend/app/core/: config.py  dependencies.py  exceptions.py  logging.py
backend/app/graders/: __init__.py  base.py  hybrid.py  llm_judge.py  rule_based.py
backend/app/models/: db.py  schemas.py
backend/app/services/: prompt_builder.py  provider_detection.py
backend/tests/: conftest.py
backend/tests/test_api/: test_build.py  test_byok.py
backend/tests/test_graders/: test_rule_based.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: BreakdownChart.tsx  GradeResultCard.tsx  GraderControlBar.tsx  GraderSelect.tsx  Layout.tsx  OllamaBanner.tsx  ProviderBadge.tsx  ProviderFallbackBanner.tsx  ProviderSelector.tsx  ScoreBadge.tsx  ScoreRing.tsx
frontend/src/hooks/: useAvailableModels.ts  useProviderConfig.ts  useStatus.ts
frontend/src/lib/: api.ts  constants.ts  types.ts  utils.ts
frontend/src/pages/: Batch.tsx  Build.tsx  Compare.tsx  Dashboard.tsx  SettingsPage.tsx
